fixed the clock-wraper size issue

--- a/style.css
+++ b/style.css
@@ -1,10 +1,4 @@
-@font-face {
-  font-family: "Digital-7";
-  src: url("fonts/digital-7.ttf") format("woff2"),
-    url("fonts/digital-7.woff") format("woff");
-}
-
-body {
+#clockdate {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,50 +35,6 @@ body {
 }
 
 #toggle:checked + .toggle-label {
-  background-color: #ccc;
-}
-
-#toggle:checked + .toggle-label:before {
-  left: calc(100% - 28px);
-}
-
-.toggle-label:before {
-  content: "";
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 26px;
-  height: 26px;
-  background-color: #ccc;
-  border-radius: 50%;
-  transition: left 0.3s ease;
-}
-
-#toggle:checked + .toggle-label {
-  background-color: #ccc;
-}
-
-#toggle:checked + .toggle-label:before {
-  left: calc(100% - 28px);
-}
-
-.toggle-label:before {
-  content: "";
-  position: absolute;
-  top: 2px;
-  left: 2px;
-  width: 26px;
-  height: 26px;
-  background-color: #141e30;
-  border-radius: 50%;
-  transition: left 0.3s ease;
-}
-
-/* #toggle:checked + .toggle-label {
-  background-color: #2196F3;
-} */
-
-#toggle:checked + .toggle-label {
   background-image: linear-gradient(135deg, #52E5E7 10%, #130CB7 100%);
   background-size: 200% auto;
   animation: liquidAnimation 10s ease infinite;
@@ -102,19 +52,9 @@ body {
   }
 }
 
-
 #toggle:checked + .toggle-label:before {
   left: calc(100% - 28px);
 }
-
-/* .clockdate-wrapper {
-  background: #141e30;
-  padding: 80px;
-  max-width: 750px;
-  width: 100%;
-  text-align: center;
-  border-radius: 20px;
-} */
 
 .clockdate-wrapper {
   padding: 80px;
@@ -172,15 +112,17 @@ body {
   font-size: 180px;
   text-shadow: 0px 0px 1px #fff;
   color: #fff;
+  display: inline-block;
 }
 
 #clock span {
   color: rgba(255, 255, 255, 0.8);
   text-shadow: 0px 0px 1px #333;
-  font-size: 150px;
+  font-size: 80px;
   position: relative;
   top: -15px;
-  left: 30px;
+  left: 10px;
+  display: inline-block;
 }
 
 #date {
@@ -188,6 +130,7 @@ body {
   font-size: 42px;
   font-family: arial, sans-serif;
   color: #fff;
+  margin-top: 20px;
 }
 
 #toggle {
